// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCardWrapper /> it renders ProductCardWrapper 1`] = `
<div
  className="mfui-product-card-wrapper mfui-product-card-wrapper_hint mfui-product-card-wrapper_hint_green mfui-product-card-wrapper_bl mfui-product-card-wrapper_br"
  onClick={[Function]}
>
  <div
    className="mfui-product-card-wrapper__inner"
  >
    <div
      className="mfui-product-card-wrapper__hint-box"
    >
      <div
        className="mfui-product-card-wrapper__hint-text"
      >
        Рекоммендуем
      </div>
    </div>
    <div
      className="mfui-product-card-wrapper__container"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<ProductCardWrapper /> it renders without hint 1`] = `
<div
  className="mfui-product-card-wrapper"
  onClick={[Function]}
>
  <div
    className="mfui-product-card-wrapper__inner"
  >
    <div
      className="mfui-product-card-wrapper__container"
    >
      <div />
    </div>
  </div>
</div>
`;
